--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.6)
 project(Coursera2)
 
 set(CMAKE_CXX_STANDARD 11)
-set(SOURCE_FILES main.cpp)
-add_executable(Coursera2 ${SOURCE_FILES})
+add_executable(translate translate.cpp)
+add_executable(peptide_numseqs peptnumseq.cpp)
+add_executable(frame_search frame_search.cpp)
