cyclopeptide sequencing partially developed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(peptide_numseqs peptnumseq.cpp)
 add_executable(frame_search frame_search.cpp)
 add_executable(linear_spectrum linear_spectrum.cpp)
 add_executable(cyclic_spectrum cyclic_spectrum.cpp)
+add_executable(cyclopeptide_sequencing cyclopeptide_sequencing.cpp)
