something was broken

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(frame_search frame_search.cpp)
 add_executable(linear_spectrum linear_spectrum.cpp)
 add_executable(cyclic_spectrum cyclic_spectrum.cpp)
 add_executable(cyclopeptide_sequencing cyclopeptide_sequencing.cpp)
+add_executable(calc_num_subpeps calc_num_subpeps.cpp)
+add_executable(peps_with_mass peps_with_mass.cpp)
