--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,5 @@ add_executable(leaderboard_cyclopeptide_sequencing leaderboard_cyclopeptide_sequ
 add_executable(leaderboard_cyclopeptide_sequencing_all leaderboard_cyclopeptide_sequencing_all.cpp)
 add_executable(leaderboard_cyclopeptide_sequencing_all_extended leaderboard_cyclopeptide_sequencing_all_extended.cpp)
 add_executable(convolve_spectrum convolve_spectrum.cpp)
+add_executable(convolution_cyclopeptide_sequencing convolution_cyclopeptide_sequencing.cpp)
+add_executable(convolution_cyclopeptide_sequencing_all convolution_cyclopeptide_sequencing_all.cpp)
